# BSUIR

./: CMakeLists.txt  CMakePresets.json
Hello/: Hello.cpp  Hello.vcxproj
Hello/Debug/: Hello.exe.recipe  Hello.ilk  Hello.vcxproj.FileListAbsolute.txt  vc143.idb
Hello/Debug/Hello.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Hello.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Hello/x64/Debug/: vc143.idb
Hello/x64/Debug/Hello.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Hello.lastbuildstate
Lab_1/Task_1/Task_1_1/: Task_1_1.cpp  Task_1_1.h  Task_1_1.vcxproj  Task_1_1.vcxproj.filters
Lab_1/Task_1/Task_1_2/: Task_1_2.cpp  Task_1_2.vcxproj
Lab_1/Task_1/Task_1_3/: Task_1_3.cpp  Task_1_3.vcxproj
Lab_1/Task_2/Task_2_1/: Task_2_1.cpp
Lab_1/Task_2/Task_2_2/: Task_2_2.cpp  Task_2_2.vcxproj.filters
Lab_1/Task_2/Task_2_3/: Task_2_3.cpp  Task_2_3.vcxproj  Task_2_3.vcxproj.filters
Lab_1/Task_3/Task_3_2/: Task_3_2.cpp  Task_3_2.vcxproj
Lab_1/Task_4/Task_4_2/: Task_4_2.cpp  Task_4_2.vcxproj  Task_4_2.vcxproj.filters
Lab_1/Task_5/Task_5_2/: Task_5_2.cpp  Task_5_2.vcxproj  Task_5_2.vcxproj.filters
Lab_1/Task_6/Task_6_2/: Task_6_2.cpp  Task_6_2.vcxproj  Task_6_2.vcxproj.filters
Lab_1/Task_7/Task_7_1/: Task_7_1.cpp  Task_7_1.vcxproj  Task_7_1.vcxproj.filters
Lab_2/Task_1/: Task_1.cpp  Task_1.vcxproj
Lab_2/Task_2/: Task_2.cpp  Task_2.vcxproj
Lab_2/Task_3/: Task_3.cpp
Lab_2/Task_4/: Task_4.cpp
Lab_2/Task_5/: Task_5.sln  Task_5.vcxproj  Task_5.vcxproj.filters  Task_OPZ.cpp  Task_OPZ.h
(+41 files in other folders)
