cmake_minimum_required(VERSION 3.12)
project(BSUIR)

set(CMAKE_CXX_STANDARD 17)

include_directories(Lab_2)

add_executable(Task_1 Lab_2/Task_1/Task_1.cpp)
add_executable(Task_2 Lab_2/Task_2/Task_2.cpp)
add_executable(Task_3 Lab_2/Task_3/Task_3.cpp)
add_executable(Task_4 Lab_2/Task_4/Task_4.cpp)
add_executable(Task_5 Lab_2/Task_5/Task_5.cpp)
